--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ KAFKA_PORT=9092
 KAFKA_CONTROLLER_PORT=9093
 PRODUCER_PORT=9095
 CONSUMER_PORT=9096
-APPLICATION_URL=127.0.0.1:8080
+APPLICATION_URL=host.docker.internal:8080
